[package]
name = "plow"
version = "0.3.3"
edition = "2021"

[dependencies]
macroquad = "0.4.13"
# version of egui-macroquad that works with macroquad 0.4.13
egui-macroquad = { git = "https://github.com/Gyorgy0/egui-macroquad.git" }
# my cross platform file dialog crate
quad-files = { git = "https://github.com/ingobeans/quad-files.git" }
# my modded version of egui-dnd that doesnt use wasm-bindgen
quad-egui-dnd = { git = "https://github.com/ingobeans/cool_egui_dnd.git" }
line_drawing = "1.0.0"
# include most standard formats except avif, since it uses ravif which uses wasm-bindgen making the web version not function
image = { version = "^0.24", default-features = false, features = [
    "bmp",
    "dds",
    "gif",
    "ico",
    "jpeg",
    "png",
    "pnm",
    "qoi",
    "tga",
    "tiff",
    "webp",
] }
strum = { version = "0.27.1", features = ["derive"] }
